--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#14b8a6",
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/speech_generator_icon_192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/speech_generator_icon_512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
